# update-cellnoor

./: .gitignore  README.md
.github/: dependabot.yaml
.github/workflows/: build-download-scbl-workbooks.yml  rust-ci.yml  typescript-ci.yml
crates/: .gitignore  Cargo.toml
crates/update-cellnoor/: Cargo.toml
python/update-cellnoor/: .gitignore  app.py  config.sample.toml  copy_chromium_datasets.py  main.py  pyproject.toml  utils.py
python/update-cellnoor/models/: cdna.py  cdna_measurements.py  chromium_datasets.py  chromium_runs.py  institutions.py  libraries.py  library_measurements.py  people.py  projects.py  sequencing_run_libraries.py  sequencing_runs.py  specimen_measurements.py  specimens.py  suspension_measurements.py  suspension_pool_measurements.py  suspension_pools.py  suspensions.py
scripts/prod/: copy-chromium-datasets.elion2.sh  run.elion2.sh  update-cellnoor.elion2.sh
