[package]
name = "update-cellnoor"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["arbitrary_precision"] }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
